--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "react-dom": "^15.5.3",
     "save": "^2.3.0"
   },
+  "jest":{
+
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   }
 }
