--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "mobx": "^3.1.9",
     "mobx-delorean": "^1.1.0",
     "mobx-react": "^4.1.8",
+    "mobx-react-devtools": "^4.2.15",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "save": "^2.3.0"
   },
-  "jest":{
-
-  },
+  "jest": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
