--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "jest": {},
   "scripts": {
+    "coverage":"jest --coverage",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
